# python-OBD

./: .gitignore  .readthedocs.yaml  README.md  REFACTOR.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/: Async Connections.md  Command Lookup.md  Command Tables.md  Connections.md  Custom Commands.md  Examples.md  Troubleshooting.md
obd/: OBDCommand.py  OBDResponse.py  UnitsAndScaling.py  __init__.py  asynchronous.py  codes.py  commands.py  decoders.py  elm327.py  obd.py  socketcan_interface.py  utils.py
obd/protocols/: README.md  __init__.py  protocol.py  protocol_can.py  protocol_legacy.py  protocol_unknown.py
tests/: README.md
